@@ -44,7 +44,9 @@ public:
 
     virtual void finishedFetchingIcon(PassRefPtr<SharedBuffer> iconData)
     {
-        COMPtr<MemoryStream> memoryStream(AdoptCOM, MemoryStream::createInstance(iconData));
+        COMPtr<MemoryStream> memoryStream;
+        if (iconData)
+            memoryStream.adoptRef(MemoryStream::createInstance(iconData));
 
         m_delegate->finishedLoadingIcon(m_fetcher, memoryStream.get());
 
